--- a/vana.html
+++ b/vana.html
@@ -166,7 +166,7 @@
                             <img src="/img/TECH (2).png" loading="lazy" alt="Logo vana in  black" class="navbar__logo"/>
                         </a>
                         <div class="navbar__content-wrapper">
-                            <a href="/about" class="navbar__link-parent is__tablet-phone-hiden w-inline-block">
+                            <a href="about.html" class="navbar__link-parent is__tablet-phone-hiden w-inline-block">
                                 <h5 class="navbar__link">About</h5>
                             </a>
                             <a href="/explore-vana" class="button is__open w-button" >Explore</a>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="nav__window">
                         <div class="window__wrapper">
-                            <a href="/about" class="navbar__link-parent is-window w-inline-block">
+                            <a href="about.html" class="navbar__link-parent is-window w-inline-block">
                                 <h5 class="navbar__link is-window">About</h5>
                             </a>
                         </div>
@@ -263,7 +263,7 @@
                                     <div class="box__-wrapper is--one">
                                         <div class="w-layout-grid box__grid">
                                             <div class="box__image--wrapper">
-                                                <div class="box__image is--a" data-w-id="8c3d38ce-d727-2c26-10e6-a2c523ab25db" data-animation-type="lottie"  data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="8" data-duration="0"><img src="/img/7309681.jpg" alt="" style="padding-bottom: ;"></div>
+                                                <div class="box__image is--a" data-w-id="8c3d38ce-d727-2c26-10e6-a2c523ab25db" data-animation-type="lottie"  data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="8" data-duration="0"><img src="/img/7309681.jpg" alt="" style="padding-bottom: 20px;"></div>
                                             </div>
                                             <div id="w-node-_58de72d8-f8c8-54b7-ae84-04a781abcf44-e520a472" class="box__text--wrapper" style="margin-top: 40px;">
                                                 <h5 class="box__tittle">Harsh savaliya</h5>
@@ -603,7 +603,7 @@
                                     <div class="footer__link-wrapper">
                                         <div class="footer__parent-link is--left">
                                             <h6 class="footer__link">Company</h6>
-                                            <a href="/about" class="footer__link is--sserif">About</a>
+                                            <a href="about.html" class="footer__link is--sserif">About</a>
                                             <a href="https://jobs.ashbyhq.com/vana" class="footer__link is--sserif">Careers</a>
                                             <a href="mailto:support@vana.com" class="footer__link is--sserif">Contact</a>
                                         </div>
