--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
+        <link rel="stylesheet" href="about.css">
         <link href="https://assets.website-files.com/62dfa5318bb52f5fea8dc489/62f8c710a4078e136c7780c7_Vana_Favicon_32x32.png" rel="shortcut icon" type="image/x-icon"/>
         <link href="https://assets.website-files.com/62dfa5318bb52f5fea8dc489/62f8c712679a830566a1e035_Vana_Favicon_256x256.png" rel="apple-touch-icon"/>
         <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
@@ -100,14 +101,14 @@
         <nav class="navbar">
             <div class="container is-navbar">
                 <div class="navbar__parent">
-                    <a href="/" class="navbar__logo-wrapper w-inline-block">
+                    <a href="vana.html" class="navbar__logo-wrapper w-inline-block">
                         <img src="https://assets.website-files.com/62dfa5318bb52f5fea8dc489/62dfb34210f09278d8bce721_Vana_Logo.svg" loading="lazy" alt="Logo vana in  black" class="navbar__logo"/>
                     </a>
                     <div class="navbar__content-wrapper">
                         <a href="/about" aria-current="page" class="navbar__link-parent is__tablet-phone-hiden w-inline-block w--current">
                             <h5 class="navbar__link">About</h5>
                         </a>
-                        <a href="/explore-vana" class="button is__open w-button">Explore</a>
+                        <a href="explore.html" class="button is__open w-button">Explore</a>
                     </div>
                     <a href="#" class="navbar__burger-wrapper is_desktop-hidden w-inline-block">
                         <div class="burger__line is--one"></div>
