--- a/vana.html
+++ b/vana.html
@@ -169,7 +169,7 @@
                             <a href="about.html" class="navbar__link-parent is__tablet-phone-hiden w-inline-block">
                                 <h5 class="navbar__link">About</h5>
                             </a>
-                            <a href="/explore-vana" class="button is__open w-button" >Explore</a>
+                            <a href="explore.html" class="button is__open w-button" >Explore</a>
                         </div>
                         <a href="#" class="navbar__burger-wrapper is_desktop-hidden w-inline-block">
                             <div class="burger__line is--one"></div>
@@ -212,7 +212,7 @@
                                     ‍<br/>
                                     ‍<strong>You can. Enter Vana.</strong>
                                 </p>
-                                <a href="/explore-vana" target="_blank" class="button is__open is-home w-button">Get Started</a>
+                                <a href="explore.html" target="_blank" class="button is__open is-home w-button">Get Started</a>
                                 <div class="form__block is--hero is--hidden w-form">
                                     <form id="hero-form" name="wf-form-hero-form" data-name="hero-form" method="get" class="form is--hero">
                                         <input type="email" class="form__field is--hero w-input" maxlength="256" name="Email-Address-2" data-name="Email Address 2" placeholder="Email Address" id="Email-Address-2"/>
@@ -339,7 +339,7 @@
                                         <br/>Create your VNA by simply making a profile on Vana. Your data is safe, secured, and owned by you - forever.
                                     </p>
                                 </div>
-                                <a href="/explore-vana" target="_blank" class="button is__product w-button">Get Started</a>
+                                <a href="explore.html" target="_blank" class="button is__product w-button">Get Started</a>
                             </div>
                             <div class="steps__circle--parent">
                                 <div id="w-node-_27a31f62-43a0-590d-46ac-2898c421f634-e520a472" class="steps__box--circle is-mob">
@@ -384,7 +384,7 @@
                                     </div>
                                     <p class="box__p">By bringing your VNA to the apps you love, you &#x27;ll receive recommendations, insights, and customized experiences that are designed just for you. You’re in total control of what you share and what apps you give access to.</p>
                                 </div>
-                                <a href="/explore-vana" class="button is__product w-button">Explore</a>
+                                <a href="explore.html" class="button is__product w-button">Explore</a>
                             </div>
                             <div class="steps__circle--parent">
                                 <div id="w-node-_4a994252-4cd9-ddc0-de70-4aba1f76e8db-e520a472" class="steps__box--circle">
