--- a/vana.html
+++ b/vana.html
@@ -36,8 +36,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="https://assets.website-files.com/62dfa5318bb52f5fea8dc489/62f8c710a4078e136c7780c7_Vana_Favicon_32x32.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="https://assets.website-files.com/62dfa5318bb52f5fea8dc489/62f8c712679a830566a1e035_Vana_Favicon_256x256.png" rel="apple-touch-icon"/>
+        <link href="/img/VERMILLION 211 PNG - Copy.png" rel="shortcut icon" type="image/x-icon"/>
+        <link href="/img/VERMILLION 211 PNG - Copy.png" rel="apple-touch-icon"/>
         <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
         <style>
             .transition__wrapper {
